RESOLVED FIXED139711
REGRESSION: Preview popovers obscure the link, look wrong
https://bugs.webkit.org/show_bug.cgi?id=139711
Summary REGRESSION: Preview popovers obscure the link, look wrong
Beth Dakin
Reported 2014-12-16 16:10:05 PST
Preview popovers are obscurring the link. This is a regression from adoping immediate actions. rdar://problem/19271854
Attachments
Patch (9.01 KB, patch)
2014-12-16 16:14 PST, Beth Dakin
thorton: review+
Beth Dakin
Comment 1 2014-12-16 16:14:13 PST
Tim Horton
Comment 2 2014-12-16 16:15:22 PST
Comment on attachment 243403 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=243403&action=review > Source/WebKit2/UIProcess/mac/WKImmediateActionController.mm:422 > + NSPopoverAnimationController *popoverController = [NSPopoverAnimationController popoverAnimationControllerWithPopover:_previewPopover.get()]; Do you need a respondsToSelector here?
Beth Dakin
Comment 3 2014-12-16 16:33:48 PST
Note You need to log in before you can comment on or make changes to this bug.