REGRESSION: Preview popovers obscure the link, look wrong https://bugs.webkit.org/show_bug.cgi?id=139711 -and corresponding- rdar://problem/19271854

Reviewed by Tim Horton.

Source/WebCore:

New SPI.
* WebCore.xcodeproj/project.pbxproj:
* platform/spi/mac/NSPopoverSPI.h: Added.

Source/WebKit2:

Switch to using NSPopoverAnimationController.
* UIProcess/mac/WKImmediateActionController.mm:
(-[WKImmediateActionController _defaultAnimationController]):
(-[WKImmediateActionController _animationControllerForCustomPreview]):



Canonical link: https://commits.webkit.org/157609@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177409 268f45cc-cd09-0410-ab3c-d52691b4dbfc